# quickwindow

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
quickwindow/: __init__.py  event.py  glfw.py  quick.py  window.py
